# example-mcp-server

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
auth_server/: __main__.py  app.py
example_client/: __main__.py  demo.py
resource_server/: __main__.py  app.py
