[project]
name = "example-mcp-server"
version = "0.1.0"
description = "Example OAuth-protected MCP server using mcpauth"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Brooks McMillin" },
]
dependencies = [
    "mcp-authflow[postgres]>=0.1.0",
    "mcp-authflow-resource>=0.1.0",
    "mcp>=1.24.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "pyright>=1.1.400",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auth_server", "resource_server", "example_client"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
